--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,7 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-
+{% include "common/_navbar.html.twig" %}
+<div id="bg-img">
+</div>
 {% endblock %}
