--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,21 +91,73 @@ body div:nth-child(3) {
   align-items: center;
 }
 body div:nth-child(3) #register {
-  outline: none;
-  text-decoration: none;
-  border: 0px;
   font-size: 20px;
   background-color: #323232;
-  color: white;
   margin-right: 4px;
 }
-body div:nth-child(3) #login {
-  width: 80px;
+body div:nth-child(3) #register a {
+  color: white;
   outline: none;
   text-decoration: none;
+}
+body div:nth-child(3) #login {
+  background-color: white;
+  height: 30px;
+  width: 80px;
   font-size: 20px;
-  border: 0px;
   margin-right: 10px;
+}
+body div:nth-child(3) #login a {
+  outline: none;
+  text-decoration: none;
+  color: black;
+}
+
+.container-form {
+  background-color: #414141;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+}
+.container-form h1 {
+  font-size: 30px;
+  color: white;
+}
+.container-form .form-register {
+  background-color: #464646;
+  width: 40%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container-form .form-register .form {
+  display: flex;
+  margin: 15px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.container-form .form-register .form label {
+  color: white;
+  margin-top: 0.5rem;
+  margin-right: 1rem;
+  width: 180px;
+  font-size: 22px;
+}
+.container-form .form-register .form input {
+  margin-top: 0.5rem;
+  width: 300px;
+  height: 25px;
+  background-color: #464646;
+  border: 0px;
+  border-bottom: 1px solid white;
+}
+.container-form .form-register .form select {
+  width: 300px;
+  height: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
