--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}NewName RP{% endblock %}
 
 {% block body %}
 {% include "common/_navbar.html.twig" %}
