--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Poppins";
+  src: url(../font/Poppins-Regular.ttf);
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -50,6 +54,7 @@ table {
 
 body .container-nav {
   background-color: #323232;
+  border-bottom: 1px solid #901313;
   display: flex;
 }
 body .container-nav .container-logo {
@@ -62,7 +67,7 @@ body .container-nav .container-logo img {
   height: 100px;
 }
 body .container-nav div:nth-child(2) {
-  width: 100%;
+  width: 67%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,13 +78,34 @@ body .container-nav div:nth-child(2) ul {
   text-align: center;
 }
 body .container-nav div:nth-child(2) ul li {
-  width: 24em;
+  width: 20em;
+  border: 1px solid #323232;
 }
 body .container-nav div:nth-child(2) ul li a {
+  position: relative;
+  font-family: "Poppins";
   color: white;
   list-style: none;
   text-decoration: none;
-  font-size: 36px;
+  font-size: 30px;
+}
+body .container-nav div:nth-child(2) ul li a:active {
+  border-bottom: 1px solid #901313;
+}
+body .container-nav div:nth-child(2) ul li a::after {
+  content: "";
+  position: absolute;
+  background-color: white;
+  height: 2px;
+  width: 0%;
+  bottom: 0px;
+  left: 0px;
+  transition: all 0.4s ease-in-out;
+}
+body .container-nav div:nth-child(2) ul li:hover a::after {
+  color: red;
+  background-color: #901313;
+  width: 100%;
 }
 body #bg-img {
   height: 90vh;
@@ -91,6 +117,8 @@ body div:nth-child(3) {
   align-items: center;
 }
 body div:nth-child(3) #register {
+  margin-left: 1.5em;
+  font-family: "Poppins";
   font-size: 20px;
   background-color: #323232;
   margin-right: 4px;
@@ -101,9 +129,10 @@ body div:nth-child(3) #register a {
   text-decoration: none;
 }
 body div:nth-child(3) #login {
+  font-family: "Poppins";
   background-color: white;
-  height: 30px;
-  width: 80px;
+  height: 2em;
+  width: 6em;
   font-size: 20px;
   margin-right: 10px;
 }
@@ -111,6 +140,48 @@ body div:nth-child(3) #login a {
   outline: none;
   text-decoration: none;
   color: black;
+}
+body div:nth-child(3) #login:active {
+  background-color: #901313;
+}
+body div:nth-child(3) p:nth-child(1) {
+  font-family: "Poppins";
+  color: white;
+  margin-right: 1em;
+}
+body div:nth-child(3) #logout {
+  font-family: "Poppins";
+  background-color: white;
+  height: 2em;
+  width: 7em;
+  font-size: 20px;
+  margin-right: 10px;
+}
+body div:nth-child(3) #logout a {
+  outline: none;
+  text-decoration: none;
+  color: black;
+}
+body div:nth-child(3) #logout:active {
+  background-color: #901313;
+}
+body div:nth-child(3) #profil {
+  font-family: "Poppins";
+  background-color: white;
+  height: 2em;
+  width: 6em;
+  font-size: 20px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+}
+body div:nth-child(3) #profil a {
+  outline: none;
+  text-decoration: none;
+  color: black;
+}
+body div:nth-child(3) #profil:active {
+  background-color: #901313;
 }
 
 .container-form {
@@ -121,7 +192,8 @@ body div:nth-child(3) #login a {
   justify-content: center;
 }
 .container-form h1 {
-  font-size: 30px;
+  font-family: "Poppins";
+  font-size: 34px;
   color: white;
 }
 .container-form .form-register {
@@ -135,29 +207,110 @@ body div:nth-child(3) #login a {
 }
 .container-form .form-register .form {
   display: flex;
-  margin: 15px;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
 }
+.container-form .form-register .form div {
+  margin-bottom: 1em;
+}
 .container-form .form-register .form label {
+  font-family: "Poppins";
   color: white;
   margin-top: 0.5rem;
   margin-right: 1rem;
   width: 180px;
   font-size: 22px;
 }
+.container-form .form-register .form label:nth-child(5) {
+  margin-bottom: 1em;
+}
 .container-form .form-register .form input {
   margin-top: 0.5rem;
+  color: white;
+  font-family: "Poppins";
   width: 300px;
   height: 25px;
   background-color: #464646;
   border: 0px;
   border-bottom: 1px solid white;
+  outline: none;
 }
 .container-form .form-register .form select {
   width: 300px;
   height: 25px;
+}
+.container-form .form-register #register-btn {
+  font-family: "Poppins";
+  font-size: 20px;
+  width: 8em;
+  height: 2.5em;
+  background-color: #464646;
+  border: 1px solid white;
+  color: white;
+}
+.container-form .form-register #register-btn:hover {
+  background-color: white;
+  color: #464646;
+  border: 1px solid #464646;
+}
+
+#login-btn {
+  margin-top: 1em;
+  font-family: "Poppins";
+  font-size: 20px;
+  width: 8em;
+  height: 2.5em;
+  background-color: #464646;
+  border: 1px solid white;
+  color: white;
+}
+
+#login-btn:hover {
+  background-color: white;
+  color: #464646;
+  border: 1px solid #464646;
+}
+
+.container-profil {
+  background-color: #414141;
+  width: 100%;
+  height: 90vh;
+}
+.container-profil div:first-child {
+  display: flex;
+  justify-content: center;
+  padding-top: 1em;
+}
+.container-profil div:first-child h2 {
+  font-family: "Poppins";
+  font-size: 34px;
+  color: white;
+}
+.container-profil .bigcontainer-grey {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 4em;
+}
+.container-profil .bigcontainer-grey .container-grey {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 4em;
+  margin-bottom: 1em;
+  padding: 3em;
+  background-color: #3c3c3c;
+  width: 24em;
+  height: 6em;
+  border-radius: 10px;
+  border: 1px solid grey;
+}
+.container-profil .bigcontainer-grey .container-grey p {
+  color: white;
+  font-family: "Poppins";
+  font-size: 22px;
+  margin-bottom: 0.1em;
 }
 
 /*# sourceMappingURL=style.css.map */
