--- a/public/scss/_register.scss
+++ b/public/scss/_register.scss
@@ -7,7 +7,8 @@
     justify-content: center;
 
     h1{
-        font-size: 30px;
+        font-family: 'Poppins';
+        font-size: 34px;
         color: white;
     }
 
@@ -23,27 +24,38 @@
 
         .form{
             display: flex;
-            margin: 15px;
             flex-direction: column;
             justify-content: space-between;
             align-items: flex-start;
 
+            div {
+                margin-bottom: 1em;
+            }
+
             label{
+                font-family: 'Poppins';
                 color: white;
                 margin-top: 0.5rem;
                 margin-right: 1rem;
                 width: 180px;
                 font-size: 22px;
+                
+            }
+
+            label:nth-child(5){
+                margin-bottom: 1em;
             }
 
             input{
                 margin-top: 0.5rem;
+                color: white;
+                font-family: 'Poppins';
                 width: 300px;
                 height: 25px;
                 background-color: rgb(70, 70, 70);
                 border: 0px;
                 border-bottom: 1px solid white;
-                
+                outline: none;
             }
 
 
@@ -53,5 +65,19 @@
             }
         }
 
+        #register-btn{
+            font-family: 'Poppins';
+            font-size: 20px;
+            width: 8em;
+            height: 2.5em;
+            background-color: rgb(70, 70, 70);
+            border: 1px solid white;
+            color: white;
+        }
+        #register-btn:hover{
+            background-color: white;
+            color: rgb(70, 70, 70);
+            border: 1px solid rgb(70, 70, 70);
+        }
     }
 }
