--- a/templates/common/_navbar.html.twig
+++ b/templates/common/_navbar.html.twig
@@ -15,8 +15,9 @@
             <div id="register"><a href="{{path('app_register')}}">Inscription</a></div>
             <div id="login"><a href="{{path('app_login')}}">Connexion</a></div>
         {% else %}
-            <p>Bienvenue, {{app.user.username}}</p>
-            <div id="login"><a href="{{path('app_logout')}}">Deconnexion</a></div>
+            <p>Bienvenue, {{app.user.username}} !</p>
+            <div id="logout"><a href="{{path('app_logout')}}">Deconnexion</a></div>
+            <div id="profil"><a href="{{path('app_profil')}}">Mon Profil</a></div>
         {% endif %}
     </div>
 </nav>
