--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,7 +6,7 @@
 {% include "common/_navbar.html.twig" %}
 <div class="container-form">
     <div class="form-register">
-        <h1>Register</h1>
+        <h1>Inscription</h1>
         
         {{ form_start(registrationForm) }}
             <div class="form">
@@ -30,9 +30,7 @@
             <div class="form">
                 {{ form_row(registrationForm.agreeTerms) }}
             </div>
-            <div class="form">
-                <button type="submit" class="btn">Register</button>
-            </div>
+            <button type="submit" id="register-btn" class="btn">Register</button>
         {{ form_end(registrationForm) }}
     </div>
 </div>
