--- a/public/scss/_profil.scss
+++ b/public/scss/_profil.scss
@@ -20,6 +20,7 @@
         justify-content: center;
         padding: 4em;
         .container-grey{
+            
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -31,6 +32,29 @@
             height: 6em;
             border-radius: 10px;
             border: 1px solid grey;
+
+            .add-cars{
+                color: green;
+                font-size: 30px;
+            }
+            .add-cars:hover {
+                color: rgb(1, 158, 1);
+            }
+            .add-cars:active {
+                color: green;
+            }
+            
+            .add-weapons{
+                color: green;
+                font-size: 30px;
+            }
+            .add-weapons:hover {
+                color: rgb(1, 158, 1);
+            }
+            .add-weapons:active {
+                color: green;
+            }
+            
             p{
                 color: white;
                 font-family: 'Poppins';
