--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -35,16 +35,24 @@
         </div>
 
         <div class="container-grey">
+            <i class="fas fa-plus-square add-cars"></i>
             <p>Véhicules : </p>
 
         </div>
 
         <div class="container-grey">
+            <i class="fas fa-plus-square add-weapons"></i>
             <p>Armes : </p>
 
         </div>
     </div>
-
+    {{ form_start(carsForm)}}
+        {{ form_row(carsForm) }}
+        {{ form_widget(carsForm) }}
+        <input type="submit" value="Envoyer">
+    {{ form_end(carsForm) }}
+    {# {% include "common/_popupcar.html.twig" %} #}
+    {% include "common/_popupweapons.html.twig" %}
 </div>
 
 {% endblock %}
