--- a/public/scss/_profil.scss
+++ b/public/scss/_profil.scss
@@ -33,6 +33,13 @@
             border-radius: 10px;
             border: 1px solid grey;
 
+            .icon-edit-delete {
+                a>i{
+                    font-size: 24px;
+                    color: rgb(158, 1, 1);
+                }
+            }
+
             .add-cars{
                 color: green;
                 font-size: 30px;
