--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -1,54 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Profil{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block body %}
 {% include "common/_navbar.html.twig" %}
-
 <div class="container-form">
     <div class="form-register">
         <h1>Inscription</h1>
         
         {{ form_start(form) }}
-            <div class="form">
-                {{ form_row(form.username, {
-                    label: 'Pseudo : '
-                }) }}
-            </div>
-            <div class="form">
-                {{ form_row(form.firstname, {
-                    label: 'Prénom RP : '
-                }) }}
-            </div>
-            <div class="form">
-                {{ form_row(form.lastname, {
-                    label: 'Nom RP : '
-                }) }}
-            </div>
-            <div class="form">
-                {{ form_row(form.birthday, {
-                    label: 'Date de naissance RP : '
-                }) }}
-            </div>
-            <div class="form">
-                {{ form_row(form.email, {
-                    label: 'Email : '
-                }) }}
-            </div>
-            {# <div class="form">
-                {{ form_row(registrationForm.plainPassword, {
-                    label: 'Password : '
-                }) }}
-            </div> #}
-            <div class="form">
-                {{ form_row(form.password) }}
-            </div>
-            <div class="form">
-                {{ form_row(form.agreeTerms) }}
-            </div>
-            <button type="submit" id="register-btn" class="btn">Register</button>
+            
+            <button type="submit">Modifier</button>
         {{ form_end(form) }}
     </div>
 </div>
-
 {% endblock %}
