--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,6 +287,49 @@ body div:nth-child(3) #profil:active {
   font-size: 34px;
   color: white;
 }
+.container-profil .confirm-delete {
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: center;
+  margin-left: 4em;
+  margin-bottom: 1em;
+  padding: 3em;
+  background-color: #3c3c3c;
+  width: 24em;
+  height: 6em;
+  border-radius: 10px;
+  border: 1px solid grey;
+}
+.container-profil .confirm-delete p {
+  font-family: "Poppins";
+  font-size: 20px;
+  color: white;
+  width: 100%;
+}
+.container-profil .confirm-delete div:nth-child(2) {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 1em;
+}
+.container-profil .confirm-delete div:nth-child(2) button {
+  outline: none;
+  border: 1px solid grey;
+  background-color: #414141;
+  color: white;
+  font-size: 20px;
+  font-family: "Poppins";
+  width: 4em;
+  height: 2em;
+}
+.container-profil .confirm-delete div:nth-child(2) button:first-child:hover {
+  background-color: green;
+}
+.container-profil .confirm-delete div:nth-child(2) button:nth-child(2):hover {
+  background-color: #9e0101;
+}
 .container-profil .bigcontainer-grey {
   display: flex;
   flex-flow: row wrap;
@@ -294,6 +337,7 @@ body div:nth-child(3) #profil:active {
   padding: 4em;
 }
 .container-profil .bigcontainer-grey .container-grey {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -306,7 +350,17 @@ body div:nth-child(3) #profil:active {
   border-radius: 10px;
   border: 1px solid grey;
 }
-.container-profil .bigcontainer-grey .container-grey .icon-edit-delete a > i {
+.container-profil .bigcontainer-grey .container-grey a #icon-edit {
+  position: absolute;
+  top: 10px;
+  left: 445px;
+  font-size: 24px;
+  color: green;
+}
+.container-profil .bigcontainer-grey .container-grey a #icon-delete {
+  position: absolute;
+  top: 10px;
+  left: 415px;
   font-size: 24px;
   color: #9e0101;
 }
