--- a/public/scss/_profil.scss
+++ b/public/scss/_profil.scss
@@ -13,6 +13,53 @@
             color: white;
         }
     }
+    
+    .confirm-delete {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: center;
+        margin-left: 4em;
+        margin-bottom: 1em;
+        padding: 3em;
+        background-color: rgb(60, 60, 60);
+        width: 24em;
+        height: 6em;
+        border-radius: 10px;
+        border: 1px solid grey;
+        p{
+            font-family: 'Poppins';
+            font-size: 20px;
+            color: white;
+            width: 100%;
+        }
+        div:nth-child(2) {
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 1em;
+
+            button{
+                outline: none;
+                border: 1px solid grey;
+                background-color: rgb(65, 65, 65);
+                color: white;
+                font-size: 20px;
+                font-family: 'Poppins';
+                width: 4em;
+                height: 2em;
+            }
+
+            button:first-child:hover{
+                background-color: green;
+            }
+
+            button:nth-child(2):hover{
+                background-color: rgb(158, 1, 1);
+            }
+        }
+    }
 
     .bigcontainer-grey{
         display: flex;
@@ -20,7 +67,7 @@
         justify-content: center;
         padding: 4em;
         .container-grey{
-            
+            position: relative;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -33,8 +80,19 @@
             border-radius: 10px;
             border: 1px solid grey;
 
-            .icon-edit-delete {
-                a>i{
+            a{
+                #icon-edit{
+                    position: absolute;
+                    top: 10px;
+                    left: 445px;
+                    font-size: 24px;
+                    color: green;
+                }
+                
+                #icon-delete{
+                    position: absolute;
+                    top: 10px;
+                    left: 415px;
                     font-size: 24px;
                     color: rgb(158, 1, 1);
                 }
