--- a/templates/common/_popupcar.html.twig
+++ b/templates/common/_popupcar.html.twig
@@ -1,5 +1,7 @@
-{{ form_start(carsForm)}}
-    {{ form_row(carsForm) }}
-    {{ form_widget(carsForm) }}
-    <input type="submit" value="Envoyer">
-{{ form_end(carsForm) }}
+<div class="container-form-cars">
+    {{ form_start(carsForm)}}
+        {{ form_row(carsForm) }}
+        {{ form_widget(carsForm) }}
+        <input type="submit" value="Envoyer">
+    {{ form_end(carsForm) }}
+</div>
