--- a/public/scss/_popupweapons.scss
+++ b/public/scss/_popupweapons.scss
@@ -10,7 +10,7 @@
     background-color: rgba(0, 0, 0, 0.8);
   }
   
-  form {
+  #form {
     display: flex;
     flex-direction: column;
     justify-content: center;
