--- a/public/scss/_register.scss
+++ b/public/scss/_register.scss
@@ -1,33 +1,59 @@
 .container-form{
     background-color: rgb(65, 65, 65);
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 
     display: flex;
     justify-content: center;
+    align-items: center;
 
     h1{
         font-family: 'Poppins';
         font-size: 34px;
         color: white;
+        margin-bottom: 1em;
     }
 
     .form-register{
         background-color: rgb(70, 70, 70);
-        width: 40%;
-        height: 70%;
+        width: 60%;
+        height: 100%;
 
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
+        .form-birthday {
+            color: white;
+            font-family: 'Poppins';
+            font-size: 22px;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            select{
+                text-decoration: none;
+                outline: none;
+                border: 1px solid grey;
+                background-color: rgb(70, 70, 70);
+                color: white;
+                font-size: 20px;
+                font-family: 'Poppins';
+                width: 5em;
+                margin-top: 0.5em;
+                margin-bottom: 1em;
+                margin-right: 0.4em;
+            }
+        }
         .form{
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            align-items: flex-start;
-
+            justify-content: center;
+            align-items: center;
+            width: 20em;
             div {
                 margin-bottom: 1em;
             }
