--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -1,16 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Edition du profil{% endblock %}
 
 {% block body %}
 {% include "common/_navbar.html.twig" %}
 <div class="container-form">
-    <div class="form-register">
-        <h1>Inscription</h1>
+    <div class="container-form-edit">
+        <h1>Edition du profil</h1>
         
         {{ form_start(form) }}
+        <div class="form-edit">
+            {{ form_row(form.username, {
+                label: 'Pseudo :'
+            }) }}
+        </div>
+        <div class="form-edit">
+            {{ form_row(form.firstname, {
+                label: 'Prénom RP :'
+            }) }}
+        </div>
+        <div class="form-edit">
+            {{ form_row(form.lastname, {
+                label: 'Nom RP :'
+            }) }}
+        </div>
+        <div class="form-edit">
+            {{ form_row(form.email, {
+                label: 'Email :'
+            }) }}
+        </div>
+        <div class="form-edit-birthday">
+            {{ form_row(form.birthday, {
+                label: 'Date de naissance :'
+            }) }}
+        </div>
+        <div class="form-edit">
+            {{ form_row(form.phoneNumber, {
+                label: 'Numéro de téléphone :'
+            }) }}
+        </div>
             
-            <button type="submit">Modifier</button>
+            <button id="edit-btn" type="submit">Modifier</button>
         {{ form_end(form) }}
     </div>
 </div>
