--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,6 @@
 <div class="container-form">
     <div class="form-register">
         <form method="post">
-        
             {% if error %}
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
@@ -19,11 +18,11 @@
             {% endif %}
 
             <h1 class="h3 mb-3 font-weight-normal">Connectez vous !</h1>
-            <div class="form">
+            <div class="form-login">
                 <label for="inputEmail">Email</label>
                 <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
             </div>
-            <div class="form">
+            <div class="form-login">
                 <label for="inputPassword">Password</label>
                 <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
             </div>
@@ -43,9 +42,9 @@
                     </label>
                 </div>
             #}
-                <button id="login-btn" class="btn btn-lg btn-primary" type="submit">
-                    Se connecter !
-                </button>
+            <button id="login-btn" class="btn btn-lg btn-primary" type="submit">
+                Se connecter !
+            </button>
         </form>
     </div>
 </div>
