--- a/templates/common/_navbar.html.twig
+++ b/templates/common/_navbar.html.twig
@@ -4,10 +4,10 @@
     </div>
     <div>
         <ul>
-            <li><a href="#">Communauté</a></li>
-            <li><a href="#">Nous rejoindre</a></li>
-            <li><a href="#">Nous soutenir</a></li>
-            <li><a href="#">Galerie</a></li>
+            <li><a href="{{path('app_home')}}">Home</a></li>
+            <li><a href="{{path('app_join')}}">Nous rejoindre</a></li>
+            <li><a href="{{path('app_soutien')}}">Nous soutenir</a></li>
+            <li><a href="{{path('app_gallery')}}">Galerie</a></li>
         </ul>
     </div>
     <div>
