--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -36,12 +36,12 @@
             <p>Portefeuille :  </p>
             <p>Argent sale : </p>
         </div>
-
-        <div class="container-grey">
-            <a href="{{path('app_cars_add', {'id': app.user.id})}}"><i class="fas fa-plus-square add-cars"></i></a>
-            <p>Véhicules :  </p>
-
-        </div>
+        {% for car in user.carId %}
+            <div class="container-grey">
+                <a href="{{path('app_cars_add', {'id': app.user.id})}}"><i class="fas fa-plus-square add-cars"></i></a>
+                <p>Véhicules :  {{ car }}</p>
+            </div>
+        {% endfor %}
         <div class="container-grey">
             <i class="fas fa-plus-square add-weapons"></i>
             <p>Armes : </p>
