--- a/public/scss/_profil.scss
+++ b/public/scss/_profil.scss
@@ -96,6 +96,22 @@
                     font-size: 24px;
                     color: rgb(158, 1, 1);
                 }
+
+                #icon-edit-cars {
+                    position: absolute;
+                    top: 10px;
+                    left: 445px;
+                    font-size: 24px;
+                    color: green;
+                }
+
+                #icon-delete-cars{
+                    position: absolute;
+                    top: 10px;
+                    left: 415px;
+                    font-size: 24px;
+                    color: rgb(158, 1, 1);
+                }
             }
 
             .add-cars{
