--- a/templates/common/_navbar.html.twig
+++ b/templates/common/_navbar.html.twig
@@ -15,6 +15,9 @@
             <div id="register"><a href="{{path('app_register')}}">Inscription</a></div>
             <div id="login"><a href="{{path('app_login')}}">Connexion</a></div>
         {% else %}
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{path('admin_panel')}}"><i class="fas fa-user-cog"></i></a>
+        {% endif %}
             <p>Bienvenue, {{app.user.username}} !</p>
             <div id="logout"><a href="{{path('app_logout')}}">Deconnexion</a></div>
             <div id="profil"><a href="{{path('app_profil', {'id': app.user.id})}}">Mon Profil</a></div>
