--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -36,12 +36,14 @@
             <p>Portefeuille :  </p>
             <p>Argent sale : </p>
         </div>
-        {% for car in user.carId %}
+
             <div class="container-grey">
                 <a href="{{path('app_cars_add', {'id': app.user.id})}}"><i class="fas fa-plus-square add-cars"></i></a>
-                <p>Véhicules :  {{ car }}</p>
-            </div>
+                <p>Véhicules : 
+        {% for car in user.carId %}
+                {{car}} </p>
         {% endfor %}
+            </div>
         <div class="container-grey">
             <i class="fas fa-plus-square add-weapons"></i>
             <p>Armes : </p>
