--- a/templates/job/add.html.twig
+++ b/templates/job/add.html.twig
@@ -6,12 +6,12 @@
 {% include "common/_navbar.html.twig" %}
 <div class="container-form">
     <div class="container-form-edit">
-        <h1>Ajout d'armes</h1>
+        <h1>Ajout d'un job</h1>
         
         {{ form_start(form) }}
         <div class="form-edit">
-            {{ form_row(form.weapons, {
-                label: 'Armes : '
+            {{ form_row(form.job, {
+                label: 'Job : '
             }) }}
         </div>
         <button id="edit-btn" type="submit">Ajouter</button>
