--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,5 +5,9 @@
 {% block body %}
 {% include "common/_navbar.html.twig" %}
 <div id="bg-img">
+    <div class="container-home">
+        <div id="logo-nn"></div>
+        <h1>Bienvenue sur NewName RP</h1>
+    </div>
 </div>
 {% endblock %}
