--- a/templates/weapon/add.html.twig
+++ b/templates/weapon/add.html.twig
@@ -10,7 +10,7 @@
         
         {{ form_start(form) }}
         <div class="form-edit">
-            {{ form_row(form.weapons, {
+            {{ form_row(form.weapon, {
                 label: 'Armes : '
             }) }}
         </div>
